--- a/sass/sections/section_portfolio.sass
+++ b/sass/sections/section_portfolio.sass
@@ -25,6 +25,9 @@
       box-sizing: border-box
       padding: 50px 10px 0 10px
 
-    .this-page
+    .bigger-font
       font-size: 30px
+      
+    .code_cademy
+      color: rgb(56,85,105)
 
