--- a/css/import.css
+++ b/css/import.css
@@ -214,8 +214,6 @@ body {
 .education {
   color: #555;
   text-align: left; }
-  .education a:hover {
-    color: red; }
   .education .caption-study {
     font-size: 30px;
     padding-bottom: 10px;
@@ -254,6 +252,8 @@ body {
     height: 113px;
     margin: 0 auto;
     border-radius: 7px; }
+  .sprite.codecademy {
+    background-position: -1099px 0; }
 
 .lasted_work {
   width: 100%;
@@ -389,8 +389,10 @@ body {
       font-size: 16px;
       box-sizing: border-box;
       padding: 50px 10px 0 10px; }
-    .portfolio-conteiner .this-page {
+    .portfolio-conteiner .bigger-font {
       font-size: 30px; }
+    .portfolio-conteiner .code_cademy {
+      color: #385569; }
 
 .contact {
   width: 100%;
