--- a/sass/import.sass
+++ b/sass/import.sass
@@ -23,4 +23,6 @@
 @import "adaptive_layout/screen_more_2880px/main"
 @import "adaptive_layout/screen_more_5120px/main"
 
+@import "certificates/main"
+
 @import "footer/footer"
