--- a/css/import.css
+++ b/css/import.css
@@ -481,6 +481,15 @@ body {
       padding-left: 90px;
       font-size: 60px;
       line-height: 210px; } }
+.certificates {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  margin: auto;
+  width: 70%; }
+
 footer {
   position: absolute;
   width: 100%;
